troca nome do arquivo de dados

--- a/chart-d3.html
+++ b/chart-d3.html
@@ -30,7 +30,7 @@ var svg = d3.select("#my_dataviz")
 
 var color = d3.scaleOrdinal(d3.schemeCategory10);
 
-d3.json("data.json", function( data) {
+d3.json("data-d3.json", function( data) {
 
   //console.log(data.links)
   // Initialize the links
