--- a/chart-visjs.html
+++ b/chart-visjs.html
@@ -42,24 +42,15 @@
             var container = document.getElementById('mynetwork');
 
             // Legenda
-            //var x = - container.clientWidth / 2 + 50;
-            //var y = - container.clientHeight / 2 + 50;
             var x = - container.clientWidth * 1.3
             var y = container.clientHeight * 1.3
 
-            var step = container.clientWidth / 10.5;
+            var step = 85;
             data.nodes.push({id: 999999999995, x: x, y: y, label: 'Fornecedor', group: 'Fornecedor', value: 1, fixed: true, physics:false});
             data.nodes.push({id: 999999999996, x: x + step, y: y, label: 'Sócio', group: 'Sócio', value: 1, fixed: true,  physics:false});
             data.nodes.push({id: 999999999997, x: x + 2 * step, y: y, label: 'Dirigente', group: 'Dirigente', value: 1, fixed: true,  physics:false});
             data.nodes.push({id: 999999999998, x: x + 3 * step, y: y, label: 'Conjuge', group: 'Conjuge', value: 1, fixed: true,  physics:false});
             data.nodes.push({id: 999999999999, x: x + 4.2 * step, y: y, label: 'Sócio e Dirigente', group: 'Sócio e Dirigente', value: 1, fixed: true,  physics:false});
-            console.log(data)
-            
-            
-            // var data = {
-            //     nodes: nodes,
-            //     edges: edges
-            // };
 
             var options = {
                 nodes: {
